feat: 添加 ECharts 依赖以支持数据可视化功能

--- a/前端设计文档.md
+++ b/前端设计文档.md
@@ -180,6 +180,237 @@ Ant Design作为一套为企业级产品而生的UI设计语言和规范，其Vu
 - API数据缓存
 - 组件级缓存
 
-## 9. 总结
+# 9.实验部分补充内容
+## 一、系统整体流程
 
-本设计文档基于FederatedScope联邦学习框架的特点，结合Ant Design Vue组件库的优势，设计了一个功能完整、结构清晰的前端界面方案。该方案充分利用了Ant Design Vue作为企业级UI组件库的优势[4]，能够为用户提供专业、美观且易用的联邦学习管理界面。
+> **目标**：在完全不知道“域”标签的前提下，把大量异构客户端 → 先自动**分簇**，再采用“两级聚合”：
+>
+> 1. **簇内** 标准 FedAvg 解决同簇数据异构，
+> 2. **簇间** 采用 **FedSAK** 低秩正则化聚合，消除簇-与-簇之间的特征/模型差异。
+
+### 1. 四层逻辑结构
+
+| 层级              | 作用                                                              | 关键操作                                                                             |
+| --------------- | --------------------------------------------------------------- | -------------------------------------------------------------------------------- |
+| **L0 原始客户端**    | 本地私有数据；既有**数据分布异构**（每人手里标签/样本分布不同），又有**特征异构**（域间相机、分辨率、传感器不同）   | 本地 SGD 训练得到参数 θ<sub>c</sub>                                                      |
+| **L1 客户端簇**     | 服务器依据上传梯度/元特征，运行 K-means、谱聚类等把 C 个客户端划成 K 个簇；簇内尽量特征相似           | 产生簇集合 𝒞 = {𝒞₁,…,𝒞<sub>K</sub>}                                                |
+| **L2 簇代理（虚节点）** | 每簇生成 1 个“Proxy”；向簇内下发模型、收集回传、做 **FedAvg**                       | θ<sub>i</sub><sup>(t+1)</sup> = ∑\_{c∈𝒞ᵢ} (n\_c/Nᵢ) θ<sub>c</sub><sup>(t)</sup> |
+| **L3 顶层服务器**    | 收集 K 个簇模型 θ = {θ₁,…,θ<sub>K</sub>}，执行 **FedSAK** 更新，再下发回各 Proxy | 见 §2                                                                             |
+
+### 2. FedSAK 簇间聚合的数学细节
+
+1. **张量堆叠**
+   对模型第 l 层，把各簇参数堆叠成 p 阶张量 W<sup>l</sup>：
+
+   $$
+     W^{l}= \mathrm{stack}\!\bigl(\theta^{l}_{1},\dots,\theta^{l}_{K}\bigr)\in\mathbb R^{d_{1}\times\cdots\times d_{p}},\;d_{p}=K
+   $$
+
+2. **Tucker 轨迹范数正则化目标**
+
+   $$
+     \mathcal L_{r}\;=\;\lambda\sum_{l=1}^{L}\;\underbrace{\sum_{k=1}^{p}\bigl\|W^{l}_{(k)}\bigr\|_{*}}_{\text{各模式展开的核范数}}
+   $$
+
+3. **子梯度计算与模型更新**
+
+   * 对每个展开矩阵 $W^{l}_{(k)} = U\Sigma V^{\top}$，其核范数的子梯度为 $U V^{\top}$。
+   * 把子梯度映射回切片，得到 $\nabla_{\theta^{l}_{i}}\mathcal L_{r}$。
+   * **更新公式**（完整模型级别，无“共享层”拆分）：
+
+     $$
+       \theta^{l}_{i}\; \leftarrow\; \theta^{l}_{i}\;-\;\eta_{w}\,\nabla_{\theta^{l}_{i}}\mathcal L_{r},\quad i=1,\dots,K.
+     $$
+
+4. **下发** θ̃<sub>i</sub> 到各 Proxy → 进入下一轮簇内 FedAvg。
+
+### 3. 一轮训练时间线
+
+1. **Proxy→Client**：Proxy 下发 θ̃<sub>i</sub>；客户端本地训练 E 个 epoch。
+2. **Client→Proxy**：上传完整模型；Proxy 做 FedAvg 得新 θ<sub>i</sub>。
+3. **Proxy→Server**：上传簇模型；服务器执行 FedSAK 子梯度下降，得到 θ̃<sub>i</sub>。
+4. **循环** t = 0, 1, … 直至满足收敛或轮次上限。
+
+---
+
+## 二、在前端「实验管理」中呈现该流程（需求规格）
+
+### 1. 新增视图位置
+
+* 在 **实验详情** 页面新增页签 **“Cluster-FedSAK”**。
+* 原文档已定义“实验列表 / 实验详情”等模块；新页签与现有 Tabs 并列。
+
+### 2. 主要可视化组件
+
+| 区块         | 说明                                                    | 参考组件                        |
+| ---------- | ----------------------------------------------------- | --------------------------- |
+| **拓扑图**    | 四层节点 + 动态连线，颜色表示收敛/异常；支持点击节点查看日志                      | `@antv/g6` / ECharts graph  |
+| **训练进度卡片** | 轮次进度条、在线客户端数、当前簇数                                     | 已有监控示例 Progress / Statistic |
+| **指标曲线**   | Loss<sub>FedAvg</sub>、𝓛<sub>r</sub>、Trace-Rank 随轮次曲线 | ECharts line                |
+| **公式弹窗**   | 点击 “Σ” 图标，弹窗展示 FedAvg 与 FedSAK 公式及符号释义                | `a-modal`                   |
+
+### 3. 数据流与接口
+
+| API                                      | 返回字段                                                                                  |
+| ---------------------------------------- | ------------------------------------------------------------------------------------- |
+| `GET /experiments/{id}/clusters`         | 拓扑结构、簇-客户端映射                                                                          |
+| `WS /experiments/{id}/fedsak/stream`     | `{round, loss_fedavg, loss_fedsak, trace_rank, clusters:[{id,size,online,avg_loss}]}` |
+| `GET /experiments/{id}/snapshot/{round}` | 某轮静态快照，用于回放                                                                           |
+
+### 4. 关键交互
+
+1. **实时监控**：前端订阅 WebSocket；每条推送更新拓扑节点颜色、折线追加数据点。
+2. **公式学习**：用户点击指标右上角 Σ，查看两条公式、参数定义、λ、η<sub>w</sub> 当前值。
+3. **历史回放**：在进度卡片选择轮次，前端调用 `/snapshot/{round}` 重绘拓扑与曲线。
+
+### 5. 配置扩展（实验创建表单）
+
+| 字段             | 类型     | 说明                          |
+| -------------- | ------ | --------------------------- |
+| `cluster_algo` | Select | K-means / Spectral / DBSCAN |
+| `num_clusters` | Number | 预期 K                        |
+| `lambda_trace` | Float  | FedSAK 正则系数 λ               |
+| `eta_w`        | Float  | FedSAK 步长 η<sub>w</sub>     |
+
+### 6. 非功能约束
+
+* **性能**：节点 ≤ 300 时图形帧率 ≥ 30 FPS；曲线单次增量 ≤ 200 点。
+* **安全**：WebSocket 必须 JWT 鉴权 + TLS。
+* **兼容**：桌面 Chrome/Edge ≥ 102；移动端降级为静态 SVG。
+
+---
+
+### 7.结论
+
+整个联邦学习流程可概括为：
+
+> **Client SGD → 簇内 FedAvg → 簇间 FedSAK → 重复**
+
+通过在“实验管理 / Cluster-FedSAK”页签中同步显示 **拓扑演化 + 指标曲线 + 公式解释**，任何未见过原始示意图的研究者也能一眼理解：
+
+1. 客户端如何被自动聚到簇；
+2. 簇内如何平均；
+3. 服务器如何用张量轨迹范数把各簇模型耦合到低秩子空间。
+
+## 三、整体架构布局和信息流动过程
+
+### 1  系统架构布局
+
+| 层级            | 组件 (逻辑角色)                 | 部署示例                    | 主要职责                                                                     |
+| ------------- | ------------------------- | ----------------------- | ------------------------------------------------------------------------ |
+| **L3 中央聚合层**  | **FedSAK Aggregator**     | 单台或分布式 CPU/GPU 节点       | 1) 接收各簇完整模型参数 θ₁…θ\_K<br>2) 执行 FedSAK 低秩正则化聚合<br>3) 将更新后的 θ̃\_i 广播给对应簇代理 |
+| **L2 簇代理层**   | **Cluster Proxy (i=1…K)** | 可与 Aggregator 同机，也可边缘部署 | 1) 向簇内客户端下发 θ̃\_i<br>2) 收集客户端上传的全模型<br>3) 执行簇内 FedAvg 产生新 θ\_i           |
+| **L1 客户端簇层**  | **Client Cluster 𝒞ᵢ**    | 逻辑分组                    | 由聚类引擎按梯度/表示相似度自动划分，缓解特征异构                                                |
+| **L0 原始客户端层** | **Client c∈𝒞ᵢ**          | 终端 / Edge / Browser     | 本地 SGD / Adam 训练私有数据集，输出完整模型参数 θ\_c                                      |
+
+> **拓扑可视化**：自上而下四层分布式有向图——中央节点 FedSAK 指向 K 个簇代理，每个代理再连接其簇内客户端。节点颜色/粗细实时反映 loss 与在线状态。节点和簇之间是全连接，每层占据一行并尽量对齐。在动画播放的过程中部分边逐渐消失体现我们的簇分类方法将每个客户端分到对应的簇内
+
+---
+
+### 2  信息流动全过程
+
+> 记 **T** 为最大通信轮次；每轮包含 *三个阶段*，见时序说明。
+
+#### 2.1 初始化阶段
+
+1. 客户端使用随机或统一初始模型 θ⁰ 进行 **E** 轮本地预热训练；
+2. 客户端上传 θ\_c⁰ → 初始聚类算法（K-means / 谱聚类等）生成簇集合 𝒞={𝒞₁,…,𝒞\_K}；
+3. 为每个簇创建 Cluster Proxy，并把簇内客户端-代理映射写入元数据库。
+
+#### 2.2 **每轮 t=0…T-1 的三段时序**
+
+```mermaid
+sequenceDiagram
+  participant S as FedSAK Aggregator (L3)
+  participant P as Cluster Proxy i (L2)
+  participant C as Client c∈𝒞ᵢ (L0)
+  Note over S,P,C: ❶ 下发阶段
+  S->>P: θ̃_i^{(t)} (来自上轮 FedSAK)
+  P->>C: θ̃_i^{(t)}
+  Note over C: 本地训练 E epoch
+  Note over S,P,C: ❷ 簇内聚合阶段
+  C-->>P: θ_c^{(t)}  (完整模型)
+  P->>P: FedAvg ⟹ θ_i^{(t+1)}
+  Note over S,P,C: ❸ 簇间聚合阶段
+  P-->>S: θ_i^{(t+1)}
+  S->>S: FedSAK ⟹ θ̃_i^{(t+1)}
+  S-->>P: 广播 θ̃_i^{(t+1)} (进入下轮)
+```
+
+---
+
+### 3  关键算法与公式
+
+#### 3.1 簇内 FedAvg（Proxy 侧）
+
+$$
+\boxed{\;
+\theta_{i}^{(t+1)}
+=\sum_{c\in\mathcal{C}_{i}}
+\frac{n_c}{N_i}\,\theta^{(t)}_c,\qquad
+N_i=\sum_{c\in\mathcal{C}_{i}} n_c
+\;}
+$$
+
+#### 3.2 簇间 FedSAK（Aggregator 侧）
+
+1. **张量堆叠** 对模型第 l 层：
+   $W^{l}=\mathrm{stack}\!\bigl(\theta^{l}_{1},\dots,\theta^{l}_{K}\bigr)$
+2. **Tucker 轨迹范数正则化目标**
+
+$$
+\mathcal{L}_{r}
+=\lambda\sum_{l=1}^{L}\sum_{k=1}^{p}
+\bigl\|W^{l}_{(k)}\bigr\|_{*}
+\tag{1}
+$$
+
+3. **子梯度计算** 对展开矩阵 $W^{l}_{(k)}=U\Sigma V^{\top}$
+
+$$
+\frac{\partial\|W^{l}_{(k)}\|_*}{\partial W^{l}_{(k)}}=U\,V^{\top}
+$$
+
+4. **模型更新（切片式）**
+
+$$
+\boxed{\;
+\theta^{l}_{i}
+\leftarrow
+\theta^{l}_{i}-\eta_{w}\,
+\bigl(UV^{\top}\bigr)_{\!i}
+\;}
+$$
+
+> 更新后生成 θ̃\_i^{(t+1)}，回传给各簇代理，开启下一通信轮。
+
+---
+
+### 4  接口与数据契约
+
+| 消息                   | 方向                   | 触发频率   | 主要字段                                    |
+| -------------------- | -------------------- | ------ | --------------------------------------- |
+| **ModelUpload**      | Client → Proxy       | 本地训练结束 | `{client_id, round, θ_full, n_samples}` |
+| **ClusterAggregate** | Proxy → Aggregator   | 每轮一次   | `{cluster_id, round, θ_cluster}`        |
+| **ModelBroadcast**   | Aggregator → Proxy   | 每轮一次   | `{cluster_id, round, θ_tilde}`          |
+| **ProxyBroadcast**   | Proxy → Clients      | 每轮一次   | `{θ_tilde, cluster_meta}`               |
+| **ClusterMap**       | Aggregator → UI & DB | 变更时    | `{client_id: cluster_id}`               |
+
+---
+
+### 5  部署与性能注意
+
+* **可扩展性** : Proxy 与 Aggregator 可横向扩展；每台 Proxy 建议 < 2 k 客户端，超限自动分裂簇。
+* **安全** : 所有消息层使用 gRPC-TLS；模型参数加密可选 Paillier 或 BFV 同态。
+* **性能上界** : FedSAK 一次 SVD 复杂度
+  $O\!\bigl(\min_{k}d_k^{2}\prod_{i\neq k}d_i\bigr)$；对大型 CNN 建议只上传后几层参数以控时延。
+
+---
+
+### 6  总结（信息流回顾）
+
+1. **数据从客户端向上游**：`θ_c` → FedAvg → `θ_i` → FedSAK → `θ̃_i`
+2. **模型从服务器向下游**：`θ̃_i` → Proxy → 所属客户端
+3. **控制流**：聚类映射 & 轮次进度经 REST/WS 推送前端，支持实时拓扑、指标曲线与公式弹窗；历史轮次可按快照回放。
+
+以上描述完整覆盖了**架构布局、数据/控制信息流动、数学更新机制、接口契约与部署要点**，足以供开发者与研究者实现并评审该分簇-FedSAK 联邦学习系统。
