feat: 添加 KaTeX 支持以渲染数学公式，更新相关样式和文档

--- a/实验动画设计文档.md
+++ b/实验动画设计文档.md
@@ -48,13 +48,84 @@ sequenceDiagram
 
 ### 2.3 关键公式（界面 Tooltip 弹窗展示）
 
-**簇内 FedAvg** \(\theta_i^{(t+1)}=\sum_{c∈𝒞_i}\frac{n_c}{N_i}\,\theta_c^{(t)},\quad N_i=\sum_{c∈𝒞_i}n_c\)
+#### 簇内 FedAvg
 
-**簇间 FedSAK**
+$$
+\theta_i^{(t+1)}
+= \sum_{c \in \mathcal{C}_i} \frac{n_c}{N_i}\,\theta_c^{(t)}, 
+\qquad
+N_i = \sum_{c \in \mathcal{C}_i} n_c
+$$
 
-1. 张量堆叠 \(W^{l}=\mathrm{stack}(\theta_1^{l},…,\theta_K^{l})\)
-2. 轨迹范数正则 \(\mathcal{L}_r=\lambda\sum_{l=1}^{L}\sum_{k=1}^{p}\|W^{l}_{(k)}\|_*\)
-3. 子梯度更新 \(\theta_i^{l}\leftarrow\theta_i^{l}-\eta_w\bigl(UV^{\top}\bigr)_i\)
+---
+
+#### 簇间 FedSAK
+
+1. **张量堆叠**
+   对第 $l$ 层，将各簇模型参数堆叠成 $p$ 阶张量：
+
+   $$
+   W^{(l)} \;=\; \mathrm{stack}\bigl(\theta_1^{(l)},\,\theta_2^{(l)},\,\dots,\,\theta_K^{(l)}\bigr)
+   $$
+
+2. **轨迹范数正则化损失**
+
+   $$
+   \mathcal{L}_r
+   = \lambda \sum_{l=1}^{L} \sum_{k=1}^{p} \bigl\|\,W_{(k)}^{(l)}\bigr\|_{*}
+   $$
+
+   其中 $W\_{(k)}^{(l)}$ 表示对 $W^{(l)}$ 按第 $k$ 模展开得到的矩阵，$|\cdot|_*$ 为核范数。
+
+3. **SVD 分解**
+
+   $$
+   W_{(k)}^{(l)} = U_k\,\Sigma_k\,V_k^{\top}
+   $$
+
+4. **子梯度**
+
+   $$
+   \nabla_{W_{(k)}^{(l)}} \bigl\|W_{(k)}^{(l)}\bigr\|_{*}
+   = U_k\,V_k^{\top}
+   $$
+
+5. **切片映射**
+   将所有模式的子梯度累加后，取第 $i$ 簇对应切片：
+
+   $$
+   G_i^{(l)}
+   = \mathrm{slice}_i\Bigl(\sum_{k=1}^{p} U_k\,V_k^{\top}\Bigr)
+   $$
+
+6. **参数更新**
+
+   $$
+   \theta_i^{(l)} 
+   \;\leftarrow\; 
+   \theta_i^{(l)} - \eta_w \, G_i^{(l)}
+   $$
+
+---
+
+#### 符号释义
+
+* $L$：模型总层数
+* $p$：张量阶数（层参数展成张量后的阶数）
+* $K$：簇的数量
+* $\theta\_c^{(t)}$：客户端 $c$ 在轮次 $t$ 时的模型参数
+* $\theta\_i^{(l)}$：第 $i$ 簇模型在第 $l$ 层的参数
+* $n\_c$：客户端 $c$ 的数据量
+* $N\_i$：簇 $\mathcal{C}\_i$ 中所有客户端总样本数
+* $\lambda$：轨迹范数正则化系数
+* $\eta\_w$：簇间聚合的学习率
+* $W^{(l)}$：第 $l$ 层簇模型参数堆叠张量
+* $W\_{(k)}^{(l)}$：按第 $k$ 模展开后的矩阵形式
+* $U\_k,\Sigma\_k,V\_k$：$W\_{(k)}^{(l)}$ 的 SVD 分解结果
+* $G\_i^{(l)}$：第 $i$ 簇在第 $l$ 层对应的子梯度切片
+* $|\cdot|_*$：矩阵核范数（trace norm）
+* $\mathrm{slice}\_i(\cdot)$：取张量在“簇”维度上第 $i$ 个索引对应切片
+* $\mathrm{stack}(\cdot)$：沿新维度将向量/矩阵堆叠为张量
 
 ---
 
