feat: add KatexRenderer and MathTextRenderer components for rendering mathematical expressions
- Introduced KatexRenderer.vue to render LaTeX math expressions using KaTeX.
- Added MathTextRenderer.vue to parse and display mixed text and math segments.
- Updated ProgressPanel.vue to utilize MathTextRenderer for displaying step descriptions with math.
- Enhanced documentation with detailed explanations of FedSAK training process and mathematical notations.

--- a/实验动画设计文档.md
+++ b/实验动画设计文档.md
@@ -20,7 +20,7 @@
 | 层级 | 节点角色                        | 前端呈现     | 说明                       |
 | -- | --------------------------- | -------- | ------------------------ |
 | L3 | **FedSAK Aggregator**       | 单一顶部节点   | 收集簇模型、执行 FedSAK、下发 θ̃\_i |
-| L2 | **Cluster Proxy (i = 1…K)** | 同行 K 个节点 | 向簇内广播模型、做簇内 FedAvg       |
+| L2 | **Cluster Proxy (i = 1…K)** | 同行 K 个节点 | 向簇内广播模型、做簇内 FedAvg，每轮从client cluster中选取若干节点作为参与本轮训练的客户端       |
 | L1 | **Client Cluster 𝒞ᵢ**      | 虚线分组框    | 由聚类算法划分，缓解特征异构           |
 | L0 | **Client c ∈ 𝒞ᵢ**          | 多个末端节点   | 本地 SGD 训练，上传 θ\_c        |
 
@@ -59,73 +59,112 @@ $$
 
 ---
 
-#### 簇间 FedSAK
+## FedSAK 训练全过程（每轮）
 
-1. **张量堆叠**
-   对第 $l$ 层，将各簇模型参数堆叠成 $p$ 阶张量：
+### **0. 初始化阶段**
 
-   $$
-   W^{(l)} \;=\; \mathrm{stack}\bigl(\theta_1^{(l)},\,\theta_2^{(l)},\,\dots,\,\theta_K^{(l)}\bigr)
-   $$
-
-2. **轨迹范数正则化损失**
-
-   $$
-   \mathcal{L}_r
-   = \lambda \sum_{l=1}^{L} \sum_{k=1}^{p} \bigl\|\,W_{(k)}^{(l)}\bigr\|_{*}
-   $$
-
-   其中 $W\_{(k)}^{(l)}$ 表示对 $W^{(l)}$ 按第 $k$ 模展开得到的矩阵，$|\cdot|_*$ 为核范数。
-
-3. **SVD 分解**
-
-   $$
-   W_{(k)}^{(l)} = U_k\,\Sigma_k\,V_k^{\top}
-   $$
-
-4. **子梯度**
-
-   $$
-   \nabla_{W_{(k)}^{(l)}} \bigl\|W_{(k)}^{(l)}\bigr\|_{*}
-   = U_k\,V_k^{\top}
-   $$
-
-5. **切片映射**
-   将所有模式的子梯度累加后，取第 $i$ 簇对应切片：
-
-   $$
-   G_i^{(l)}
-   = \mathrm{slice}_i\Bigl(\sum_{k=1}^{p} U_k\,V_k^{\top}\Bigr)
-   $$
-
-6. **参数更新**
-
-   $$
-   \theta_i^{(l)} 
-   \;\leftarrow\; 
-   \theta_i^{(l)} - \eta_w \, G_i^{(l)}
-   $$
+* 服务器为每个客户端 $i$ 随机初始化本地模型参数 $\theta_i^0$
+* 同时初始化共享层权重 $\tilde{w}^0$，作为全局参考
 
 ---
 
-#### 符号释义
+### **1. 服务器广播共享层**
 
-* $L$：模型总层数
-* $p$：张量阶数（层参数展成张量后的阶数）
-* $K$：簇的数量
-* $\theta\_c^{(t)}$：客户端 $c$ 在轮次 $t$ 时的模型参数
-* $\theta\_i^{(l)}$：第 $i$ 簇模型在第 $l$ 层的参数
-* $n\_c$：客户端 $c$ 的数据量
-* $N\_i$：簇 $\mathcal{C}\_i$ 中所有客户端总样本数
-* $\lambda$：轨迹范数正则化系数
-* $\eta\_w$：簇间聚合的学习率
-* $W^{(l)}$：第 $l$ 层簇模型参数堆叠张量
-* $W\_{(k)}^{(l)}$：按第 $k$ 模展开后的矩阵形式
-* $U\_k,\Sigma\_k,V\_k$：$W\_{(k)}^{(l)}$ 的 SVD 分解结果
-* $G\_i^{(l)}$：第 $i$ 簇在第 $l$ 层对应的子梯度切片
-* $|\cdot|_*$：矩阵核范数（trace norm）
-* $\mathrm{slice}\_i(\cdot)$：取张量在“簇”维度上第 $i$ 个索引对应切片
-* $\mathrm{stack}(\cdot)$：沿新维度将向量/矩阵堆叠为张量
+* 在第 $t$ 轮开始时，服务器向所有客户端广播当前共享层参数：
+
+  $$
+  \tilde{w}^{t-1}
+  $$
+
+---
+
+### **2. 客户端替换共享层**
+
+* 每个客户端将自己模型中的对应共享部分替换为服务器下发的共享层：
+
+  $$
+  \tilde{\theta}_i^t \leftarrow \text{Replace}(\theta_i^{t-1}, \tilde{w}^{t-1})
+  $$
+
+---
+
+### **3. 客户端本地训练**
+
+* 客户端在本地数据 $x_i$ 上执行 $E$ 步 SGD 更新本地模型：
+
+  $$
+  \theta_i^{t} \leftarrow \tilde{\theta}_i^t - \eta_\theta \nabla \mathcal{L}_c(\tilde{\theta}_i^t; x_i)
+  $$
+* 其中，$\mathcal{L}_c$ 是分类交叉熵损失，$\eta_\theta$ 是学习率
+
+---
+
+### **4. 客户端上传共享层**
+
+* 客户端提取其本地模型中定义为共享部分的权重 $w_i^t \subset \theta_i^t$ 并上传至服务器：
+
+  $$
+  w_i^t \rightarrow \text{Server}
+  $$
+
+---
+
+### **5. 服务器端聚合过程**
+
+#### **(a) 构建张量堆叠结构**
+
+* 对于每一层 $l$，将客户端上传的共享参数堆叠成 $p$-阶张量：
+
+  $$
+  W^l = \text{stack}(w_1^l, w_2^l, \ldots, w_M^l)
+  $$
+
+#### **(b) 定义正则化项**
+
+* 构建多维迹范数正则项作为任务间关联建模方式：
+
+  $$
+  \mathcal{L}_r = \sum_{l=1}^L \sum_{k=1}^{p} \left\| W_{(k)}^l \right\|_*
+  $$
+* 其中 $W_{(k)}^l$ 是张量在第 $k$ 模下的 unfolding 矩阵
+
+#### **(c) 次梯度下降优化共享层**
+
+* 对于每个 unfolding 矩阵迹范数的次梯度为：
+
+  $$
+  \frac{\partial \left\| W_{(k)}^l \right\|_*}{\partial W_{(k)}^l} = U V^\top
+  $$
+* 对每个客户端上传的共享切片，执行一次梯度下降：
+
+  $$
+  \tilde{w}_i^t = w_i^t - \eta_w \nabla \mathcal{L}_r
+  $$
+* 更新后的 $\tilde{w}_i^t$ 是服务器针对客户端 $i$ 个性化后的共享层
+
+---
+
+### **6. 服务器回传共享层**
+
+* 将每个客户端的更新共享层 $\tilde{w}_i^t$ 发送回客户端，供下轮训练替换用
+
+---
+
+## 优化目标（全局视角）
+
+FedSAK 等价于在以下全局优化目标上迭代：
+
+$$
+\min_{\Theta} \left\{
+\frac{1}{M} \sum_{i=1}^M \frac{1}{n_i} \sum_{j=1}^{n_i}
+\mathcal{L}(F_i(\Theta; x_{ij}), y_{ij})
++ \lambda \|W\|_*
+\right\}
+$$
+
+* $\Theta = \{\theta_1, \theta_2, \ldots, \theta_M\}$
+* $W$ 是所有客户端共享层堆叠而成的结构
+* $\lambda$ 控制正则化强度，平衡个性化与共享协同
 
 ---
 
